# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateSubsRequest"
+                            "$ref": "#/definitions/models.SubsRequest"
                         }
                     }
                 ],
@@ -107,7 +107,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.GetSubsResponse"
+                                "$ref": "#/definitions/models.SubsResponse"
                             }
                         }
                     },
@@ -149,7 +149,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.GetSubsResponse"
+                            "$ref": "#/definitions/models.SubsResponse"
                         }
                     },
                     "400": {
@@ -187,7 +187,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateSubsRequest"
+                            "$ref": "#/definitions/models.SubsRequest"
                         }
                     }
                 ],
@@ -197,7 +197,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.GetSubsResponse"
+                                "$ref": "#/definitions/models.SubsResponse"
                             }
                         }
                     },
@@ -218,7 +218,23 @@
         }
     },
     "definitions": {
-        "models.CreateSubsRequest": {
+        "models.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.GoodResponse": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SubsRequest": {
             "type": "object",
             "properties": {
                 "end_date": {
@@ -243,15 +259,7 @@
                 }
             }
         },
-        "models.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "msg": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.GetSubsResponse": {
+        "models.SubsResponse": {
             "type": "object",
             "properties": {
                 "end_date": {
@@ -273,14 +281,6 @@
                 "user_id": {
                     "type": "string",
                     "example": "123e4567-e89b-12d3-a456-426614174000"
-                }
-            }
-        },
-        "models.GoodResponse": {
-            "type": "object",
-            "properties": {
-                "msg": {
-                    "type": "string"
                 }
             }
         }
